fix: Sửa lỗi namespace và cập nhật giao diện trang chủ

--- a/Nhom13.csproj
+++ b/Nhom13.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>Nhom13</RootNamespace>
+    <AssemblyName>Nhom13</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
